--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <!-- <script src="https://unpkg.com/@supabase/supabase-js@2"></script> -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/book.svg" />
+
+   
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Read Now</title>
   </head>
